@@ -28,7 +28,7 @@ Requirements
 
 ----
 
-1. Python 2.7+, 3.5+
+1. Python 3.5+
 2. Django 1.8+
 3. Django Admin contrib
 
